<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.jabc.cinco</groupId>
	<artifactId>de.jabc.cinco.meta.parent</artifactId>
	<version>3.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<!-- TODO:SAMI:
		- textmate for msl and cpd
	 -->

	<properties>
		<xtextVersion>2.22.0</xtextVersion>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<tycho.version>2.1.0</tycho.version>
		
		<emf.version>2.22.0</emf.version>
		<tycho.version>2.1.0</tycho.version>
		<mwe2.launch.version>2.12.0.M2</mwe2.launch.version>
		<build-helper.version>3.2.0</build-helper.version>
		<antrun.version>3.0.0</antrun.version>
		<mtsg.version>1.1.3</mtsg.version>
		<ecore-sibs.version>1.5</ecore-sibs.version>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<photon-repo.url>https://download.eclipse.org/releases/2020-06/</photon-repo.url>		
	
		<junit5.version>5.1.1</junit5.version>
	</properties>
	
	<modules>
		<!-- model -->
		<module>de.jabc.cinco.meta.core.ge.style.model</module>
		<module>de.jabc.cinco.meta.core.mgl.model</module>
		<module>de.jabc.cinco.meta.productdefinition.model</module>
		<!-- utils -->
		<module>de.jabc.cinco.meta.core.event</module>
		<module>de.jabc.cinco.meta.plugin.event.api</module>
		<module>de.jabc.cinco.meta.core.utils</module>
		<!-- languages -->
		<module>de.jabc.cinco.meta.core.ge.style</module>
		<module>de.jabc.cinco.meta.core.mgl</module>
		<module>de.jabc.cinco.meta.productdefinition</module>
		<!-- meta-plugin -->
		<module>de.jabc.cinco.meta.plugin.pyro.generator</module>
		<!-- language-server -->
		<module>de.jabc.cinco.meta.core.ge.style.ide</module>
		<module>de.jabc.cinco.meta.core.mgl.ide</module>
		<module>de.jabc.cinco.meta.productdefinition.ide</module>
		<module>de.jabc.cinco.meta.core.ide</module>
  	</modules>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.eclipse.xtext</groupId>
				<artifactId>xtext-dev-bom</artifactId>
				<version>${xtextVersion}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.xtend</groupId>
					<artifactId>xtend-maven-plugin</artifactId>
					<version>${xtextVersion}</version>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
								<goal>xtend-install-debug-info</goal>
								<goal>testCompile</goal>
								<goal>xtend-test-install-debug-info</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<outputDirectory>${basedir}/src/main/xtend-gen</outputDirectory>
						<testOutputDirectory>${basedir}/src/test/xtend-gen</testOutputDirectory>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
					<configuration>
						<filesets>
							<fileset>
								<directory>${basedir}/src/main/xtend-gen</directory>
								<includes>
									<include>**/*</include>
								</includes>
							</fileset>
							<fileset>
								<directory>${basedir}/src/test/xtend-gen</directory>
								<includes>
									<include>**/*</include>
								</includes>
							</fileset>
						</filesets>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
					<configuration>
						<!-- workaround for https://issues.apache.org/jira/browse/SUREFIRE-1588 -->
						<useSystemClassLoader>false</useSystemClassLoader>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											build-helper-maven-plugin
										</artifactId>
										<versionRange>
											[1.9.1,)
										</versionRange>
										<goals>
											<goal>add-resource</goal>
											<goal>add-source</goal>
											<goal>add-test-resource</goal>
											<goal>add-test-source</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore/>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<repositories>
		<repository>
			<id>maven-public</id>
			<name>LS5 Public Repository</name>
			<url>https://ls5svn.cs.tu-dortmund.de/maven-public/</url>
		</repository>
		<repository>
			<id>photon</id>
			<url>${photon-repo.url}</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>codehaus-snapshots</id>
			<name>disable dead 'Codehaus Snapshots' repository, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
			<url>http://nexus.codehaus.org/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>codehaus-snapshots</id>
			<name>disable dead 'Codehaus Snapshots' repository, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
			<url>http://nexus.codehaus.org/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	<profiles>
		<profile>
			<id>macos</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
				<platformSystemProperties>-XstartOnFirstThread</platformSystemProperties>
			</properties>
		</profile>
		<profile>
			<id>jdk9-or-newer</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<properties>
				<moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
			</properties>
		</profile>
	</profiles>

	<dependencies>
	</dependencies>
</project>
